--- a/PetFinderApp/Info.plist
+++ b/PetFinderApp/Info.plist
@@ -46,5 +46,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The app needs to use your location to display pets around your area</string>
 </dict>
 </plist>
